--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Gallery</string>
+    <string name="new_visit">New Visit</string>
+    <string name="title">Title</string>
+    <string name="title_placeholder">insert a title</string>
+    <string name="start">Start</string>
 </resources>
