--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="title">Title</string>
     <string name="title_placeholder">insert a title</string>
     <string name="start">Start</string>
+    <string name="stop">Stop</string>
+    <string name="fab_camera_desc">Snap a photo!</string>
 </resources>
